--- a/index.html
+++ b/index.html
@@ -6,17 +6,120 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shubham Group</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="logo">
-            <img src="./image/logo.png" alt="">
-        </div>
-        <h1>We are working on it...</h1>
-    </div>
 
+    <!-- home-page-start -->
+    <section>
+        <div class="container">
+            <div class="header-icon">
+                <div class="icons">
+                    <ul>
+                        <li> <a href="#"> <i class="bi bi-telephone-fill"></i> </a> </li>
+                        <li> <a href="#"><i class="bi bi-envelope-fill"></i></a> </li>
+                        <li> <a href="#"><i class="bi bi-telephone"></i></a> </li>
+                        <li> <a href="#"><i class="bi bi-instagram"></i></a> </li>
+                        <li> <a href="#"><i class="bi bi-linkedin"></i></a> </li>
+                        <li> <a href="#"><i class="bi bi-twitter"></i></a> </li>
+                        <li> <a href="#"> <i class="bi bi-telephone"></i> <span>+91 9922999290</span> </a> </li>
+                        <li> <a href="#"><i class="bi bi-envelope"></i> <span>info@shubhamgroup.co.in</span> </a> </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="header-nav">
+                <ul>
+                    <li> <a href="#">HOME</a> </li>
+                    <li> <a href="#">ABOUT US</a> </li>
+                    <li> <a href="#">SERVICES</a> </li>
+                    <li> <a href="#">GALLERY</a> </li>
+                    <li> <img src="./image/logo.png" alt=""> </li>
+                    <li> <a href="#">VIDEOS</a> </li>
+                    <li> <a href="#">TESTIMONIALS</a> </li>
+                    <li> <a href="#">CONTACT US</a> </li>
+                </ul>
+            </div>
+
+            <div class="text">
+                <h1>Delivering Value through Ethics & Excellence! </h1>
+                <h5>Trusted Provider of Professional Facility Management Services</h5>
+                <span> <a href="#">Enquiry Now </a> </span>
+            </div>
+        </div>
+    </section>
+    <!-- home-page-end -->
+
+    <!-- services-section-start -->
+    <section>
+
+        <div id="services">
+            <div class="sect-title">
+                <h1>SERVICES</h1>
+            </div>
+
+            <div class="service-box">
+                <img src="./image/services/plumbing.jpg" alt="">
+                <h2>PLUMBING</h2>
+                <p>We use latest techniques to ensure that your job is done right at the first time and every time.</p>
+                <span><a href="#"> Enquiry Now </a></span>
+            </div>
+
+            <div class="service-box">
+                <img src="./image/services/waterproffing.jpg" alt="">
+                <h2>WATERPROOFING</h2>
+                <p>We also provide waterproofing services to all localities and make sure that water cannot damage your homes.</p>
+                <span><a href="#"> Enquiry Now </a></span>
+            </div>
+
+            <div class="service-box">
+                <img src="./image/services/fire-protection.jpg" alt="">
+                <h2>FIRE PROTECTION SERVICES</h2>
+                <p>Our services also include fire sprinkler, security and fire alarm systems installation and monitoring.</p>
+                <span><a href="#"> Enquiry Now </a></span>
+            </div>
+
+            <div class="service-box">
+                <img src="./image/services/painting.jpg" alt="">
+                <h2>PAINTING</h2>
+                <p>We expertise in residential painting for apartments flats, row houses, bungalows and many more projects.</p>
+                <span><a href="#"> Enquiry Now </a></span>
+            </div>
+  
+             <div class="service-box">
+                 <img src="./image/services/itering-design.jpg" alt="">
+                 <h2>INTERIOR DESIGNING</h2>
+                 <p>As per the test, preference and budget of your esteemed clients we help them in organising there space the way the want.</p>
+                 <span><a href="#"> Enquiry Now </a></span>
+             </div>
+
+             <div class="service-box">
+                 <img src="./image/services/turnkey-project-work.jpg" alt="">
+                 <h2>TURNKEY PROJECT WORK</h2>
+                 <p>Our team has the most qualified civil engineers and other dignified experts, providing the best turnkey project services to you.</p>
+                 <span><a href="#"> Enquiry Now </a></span>
+             </div>
+
+             <div class="service-box">
+                 <img src="./image/services/excavtion-work.jpg" alt="">
+                 <h2>EXCAVATION WORK</h2>
+                 <p>We are engaged in offering excavation work services that are rendered in to the standard set by us.</p>
+                 <span><a href="#"> Enquiry Now </a></span>
+             </div>
+
+             <div class="service-box">
+                 <img src="./image/services/repaire-restoration.jpg" alt="">
+                 <h2>REPAIR & RESTORATION</h2>
+                 <p>We providing proficient and reliable repair and restoration services for residential buildings, commercial places etc.</p>
+                 <span><a href="#"> Enquiry Now </a></span>
+             </div>
+
+        </div>
+
+    </section>
+    <!-- services-section-end -->
 
 </body>
 
