--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shubham Group</title>
+<!-- favicon-links -->
+    <link rel="apple-touch-icon" sizes="57x57" href="image/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="image/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="image/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="image/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="image/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="image/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="image/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="image/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="image/favicon/apple-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="image/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- og-tags-links -->
+    <meta property="og:title" content="Shubham Group">
+    <meta property="og:site_name" content="shubhamgroup.co.in">
+    <meta property="og:url" content="http://shubhamgroup.co.in/">
+    <meta property="og:description" content="Irrespective of the industry sector, competent manpower is a crucial requirement  for  ensuring smooth business operations.
+At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="image/logo.png">
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/main.css">
@@ -21,7 +49,7 @@
                     <ul>
                         <li> <a href="#"> <i class="bi bi-telephone-fill"></i> </a> </li>
                         <li> <a href="#"><i class="bi bi-envelope-fill"></i></a> </li>
-                        <li> <a href="#"><i class="bi bi-telephone"></i></a> </li>
+                        <li> <a href="#"><i class="bi bi-whatsapp"></i></a> </li>
                         <li> <a href="#"><i class="bi bi-instagram"></i></a> </li>
                         <li> <a href="#"><i class="bi bi-linkedin"></i></a> </li>
                         <li> <a href="#"><i class="bi bi-twitter"></i></a> </li>
@@ -127,6 +155,25 @@
 
     </section>
     <!-- services-section-end -->
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {},
+            Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = "https://embed.tawk.to/61ebcd489bd1f31184d8b5a2/1fq0hjpna";
+            s1.charset = "UTF-8";
+            s1.setAttribute("crossorigin", "*");
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+
+        //https://dashboard.tawk.to/?lang=en#/dashboard
+        //sameerEMail -paswd
+    </script>
+    <!--End of Tawk.to Script-->
 
 </body>
 
