about-gallery updated

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
                         <li> <a href="#"> <i class="bi bi-telephone-fill"></i> </a> </li>
                         <li> <a href="#"><i class="bi bi-envelope-fill"></i></a> </li>
                         <li> <a href="#"><i class="bi bi-whatsapp"></i></a> </li>
-                        <li> <a href="#"><i class="bi bi-instagram"></i></a> </li>
+                        <li> <a href="#"><i class="bi bi-facebook"></i></a> </li>
                         <li> <a href="#"><i class="bi bi-linkedin"></i></a> </li>
                         <li> <a href="#"><i class="bi bi-twitter"></i></a> </li>
                         <li> <a href="#"> <i class="bi bi-telephone"></i> <span>+91 9922999290</span> </a> </li>
@@ -155,6 +155,111 @@ At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
 
     </section>
     <!-- services-section-end -->
+
+    <!-- about-us-section-start -->
+<section>
+    <div id="about-us">
+        <div class="about-title">
+            <h1>ABOUT US</h1>
+        </div>
+        <div class="about-text-box">
+            <h3>Shubham GROUP</h3>
+            <p>We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil contracting services that surpass our clients expectations.
+                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                contracting services that surpass our clients expectations.
+                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                contracting services that surpass our clients expectations.
+                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                contracting services that surpass our clients expectations.
+                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                contracting services that surpass our clients expectations.
+                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                contracting services that surpass our clients expectations.
+                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                contracting services that surpass our clients expectations.
+                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                contracting services that surpass our clients expectations.
+                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                contracting services that surpass our clients expectations.
+            </p>
+        </div>
+        <div class="about-img-box">
+            <img src="image/about-us/about-img.jpg" alt="">
+        </div>
+
+    </div>
+</section>
+
+    <!-- about-us-section-end -->
+
+    <!-- gallery-section-start -->
+    <section>
+<div id="gallery">
+    <div class="gallery-title">
+        <h1>GALLERY</h1>
+    </div>
+    <div class="gallery-img-box">
+        <img src="image/gallery/gallery-img-1.jpg" alt="">
+    </div>
+    <div class="gallery-img-box">
+        <img src="image/gallery/gallery-img-2.jpg" alt="">
+    </div>
+    <div class="gallery-img-box">
+        <img src="image/gallery/gallery-img-3.jpg" alt="">
+    </div>
+</div>
+</section>
+    <!-- gallery-section-end -->
+
+    <!-- footer-section-start -->
+<section>
+    <div id="footer">
+        <div class="footer-column">
+            <h2>USEFUL LINKS</h2>
+            <ul>
+                <li> <a href="#">PRIVACY POLICY</a> </li>
+                <li> <a href="#">SERVICES</a> </li>
+                <li> <a href="#">GALLERY</a> </li>
+                <li> <a href="#">TESTIMONIALS</a> </li>
+            </ul>
+        </div>
+        <div class="footer-column hidden">
+            <h2>USEFUL LINKS</h2>
+            <ul>
+                <li> <a href="#">PRIVACY POLICY</a> </li>
+                <li> <a href="#">SERVICES</a> </li>
+                <li> <a href="#">GALLERY</a> </li>
+                <li> <a href="#">TESTIMONIALS</a> </li>
+            </ul>
+        </div>
+
+        <div class="footer-column">
+            <h2 class="margin-bottom">CORPORATE OFFICE ADDRESS</h2>
+            <p>Plot No 278,</p>
+            <p>Indraprasth Society,</p>
+            <p>Behind Akashwani,</p>
+            <p>Near James Bajaj Showroom,</p>
+            <p>Hadapsar,</p>
+            <p>Pune 411028.</p>
+        </div>
+
+        <div class="footer-column">
+            <h2>CONNECT</h2>
+            <div class="icons">
+                <ul>
+                    <li> <a href="#"><i class="bi bi-facebook"></i></a> </li>
+                    <li> <a href="#"><i class="bi bi-whatsapp"></i></a> </li>
+                    <li> <a href="#"><i class="bi bi-linkedin"></i></a> </li>
+                    <li> <a href="#"><i class="bi bi-twitter"></i></a> </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+     <div class="footer-bottom">
+         <span> &copy; Copyrights 2022- Shubham Group. All Right Reserved. </span>
+     </div>
+</section>
+        <!-- footer-section-end -->
 
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
