--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shubham Group</title>
-<!-- favicon-links -->
+    <!-- favicon-links -->
     <link rel="apple-touch-icon" sizes="57x57" href="image/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="image/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="image/favicon/apple-icon-72x72.png">
@@ -36,7 +36,12 @@ At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/contact-us.css">
+    <link rel="stylesheet" href="css/gallery.css">
+    <link rel="stylesheet" href="css/about-us.css">
+    <link rel="stylesheet" href="css/services.css">
+    <link rel="stylesheet" href="css/home-page.css">
 </head>
 
 <body>
@@ -44,37 +49,52 @@ At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
     <!-- home-page-start -->
     <section>
         <div class="container">
-            <div class="header-icon">
-                <div class="icons">
-                    <ul>
-                        <li> <a href="#"> <i class="bi bi-telephone-fill"></i> </a> </li>
-                        <li> <a href="#"><i class="bi bi-envelope-fill"></i></a> </li>
-                        <li> <a href="#"><i class="bi bi-whatsapp"></i></a> </li>
-                        <li> <a href="#"><i class="bi bi-facebook"></i></a> </li>
-                        <li> <a href="#"><i class="bi bi-linkedin"></i></a> </li>
-                        <li> <a href="#"><i class="bi bi-twitter"></i></a> </li>
-                        <li> <a href="#"> <i class="bi bi-telephone"></i> <span>+91 9922999290</span> </a> </li>
-                        <li> <a href="#"><i class="bi bi-envelope"></i> <span>info@shubhamgroup.co.in</span> </a> </li>
-                    </ul>
+            <div class="page-container">
+                <div class="header-icon">
+                    <div class="icons">
+                        <ul>
+                            <li> <a href="#"> <i class="bi bi-telephone-fill"></i> </a> </li>
+                            <li> <a href="#"><i class="bi bi-envelope-fill"></i></a> </li>
+                            <li> <a href="#"><i class="bi bi-whatsapp"></i></a> </li>
+                            <li> <a href="#"><i class="bi bi-facebook"></i></a> </li>
+                            <li> <a href="#"><i class="bi bi-linkedin"></i></a> </li>
+                            <li> <a href="#"><i class="bi bi-twitter"></i></a> </li>
+                            <li> <a href="#"> <i class="bi bi-telephone"></i> <span>+91 9922999290</span> </a> </li>
+                            <li> <a href="#"><i class="bi bi-envelope"></i> <span>info@shubhamgroup.co.in</span> </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="header-nav">
-                <ul>
-                    <li> <a href="#">HOME</a> </li>
-                    <li> <a href="#">ABOUT US</a> </li>
-                    <li> <a href="#">SERVICES</a> </li>
-                    <li> <a href="#">GALLERY</a> </li>
-                    <li> <img src="image/logo.png" alt=""> </li>
-                    <li> <a href="#">VIDEOS</a> </li>
-                    <li> <a href="#">TESTIMONIALS</a> </li>
-                    <li> <a href="#">CONTACT US</a> </li>
-                </ul>
-            </div>
+                <div class="header-nav">
+                    <div class="header-buttons">
+                        <ul>
+                            <li> <a href="#">HOME</a> </li>
+                            <li> <a href="#">ABOUT US</a> </li>
+                            <li> <a href="#">SERVICES</a> </li>
+                            <li> <a href="#">GALLERY</a> </li>
+                        </ul>
+                    </div>
 
-            <div class="text">
-                <h1>Delivering Value through Ethics & Excellence! </h1>
-                <h5>Trusted Provider of Professional Facility Management Services</h5>
-                <span> <a href="#">Enquiry Now </a> </span>
+                    <div class="header-logo">
+                        <ul>
+                            <li> <img src="image/logo.png" alt=""> </li>
+                        </ul>
+                    </div>
+
+                    <div class="header-buttons flex-end">
+                        <ul>
+                            <li> <a href="#">VIDEOS</a> </li>
+                            <li> <a href="#">TESTIMONIALS</a> </li>
+                            <li> <a href="#">CONTACT US</a> </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="text">
+                    <h1>Delivering Value through Ethics & Excellence! </h1>
+                    <h5>Trusted Provider of Professional Facility Management Services</h5>
+                    <span> <a href="#">Enquiry Now </a> </span>
+                </div>
             </div>
         </div>
     </section>
@@ -84,6 +104,7 @@ At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
     <section>
 
         <div id="services">
+
             <div class="sect-title">
                 <h1>SERVICES</h1>
             </div>
@@ -157,109 +178,192 @@ At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
     <!-- services-section-end -->
 
     <!-- about-us-section-start -->
-<section>
-    <div id="about-us">
-        <div class="about-title">
-            <h1>ABOUT US</h1>
-        </div>
-        <div class="about-text-box">
-            <h3>Shubham GROUP</h3>
-            <p>We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil contracting services that surpass our clients expectations.
-                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                contracting services that surpass our clients expectations.
-                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                contracting services that surpass our clients expectations.
-                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                contracting services that surpass our clients expectations.
-                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                contracting services that surpass our clients expectations.
-                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                contracting services that surpass our clients expectations.
-                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                contracting services that surpass our clients expectations.
-                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                contracting services that surpass our clients expectations.
-                We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                contracting services that surpass our clients expectations.
-            </p>
-        </div>
-        <div class="about-img-box">
-            <img src="image/about-us/about-img.jpg" alt="">
-        </div>
+    <section>
+        <div id="about-us">
+            <div class="about-title">
+                <h1>ABOUT US</h1>
+            </div>
+            <div class="about-text-box">
+                <h3>Shubham GROUP</h3>
+                <p>We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                    contracting services that surpass our clients expectations.
+                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                    contracting services that surpass our clients expectations.
+                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                    contracting services that surpass our clients expectations.
+                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                    contracting services that surpass our clients expectations.
+                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                    contracting services that surpass our clients expectations.
+                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                    contracting services that surpass our clients expectations.
+                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                    contracting services that surpass our clients expectations.
+                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                    contracting services that surpass our clients expectations.
+                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
+                    contracting services that surpass our clients expectations.
+                </p>
+            </div>
+            <div class="about-img-box">
+                <img src="image/about-us/about-img.jpg" alt="">
+            </div>
 
-    </div>
-</section>
+        </div>
+    </section>
 
     <!-- about-us-section-end -->
 
     <!-- gallery-section-start -->
     <section>
-<div id="gallery">
-    <div class="gallery-title">
-        <h1>GALLERY</h1>
-    </div>
-    <div class="gallery-img-box">
-        <img src="image/gallery/gallery-img-1.jpg" alt="">
-    </div>
-    <div class="gallery-img-box">
-        <img src="image/gallery/gallery-img-2.jpg" alt="">
-    </div>
-    <div class="gallery-img-box">
-        <img src="image/gallery/gallery-img-3.jpg" alt="">
-    </div>
-</div>
-</section>
-    <!-- gallery-section-end -->
-
-    <!-- footer-section-start -->
-<section>
-    <div id="footer">
-        <div class="footer-column">
-            <h2>USEFUL LINKS</h2>
-            <ul>
-                <li> <a href="#">PRIVACY POLICY</a> </li>
-                <li> <a href="#">SERVICES</a> </li>
-                <li> <a href="#">GALLERY</a> </li>
-                <li> <a href="#">TESTIMONIALS</a> </li>
-            </ul>
-        </div>
-        <div class="footer-column hidden">
-            <h2>USEFUL LINKS</h2>
-            <ul>
-                <li> <a href="#">PRIVACY POLICY</a> </li>
-                <li> <a href="#">SERVICES</a> </li>
-                <li> <a href="#">GALLERY</a> </li>
-                <li> <a href="#">TESTIMONIALS</a> </li>
-            </ul>
-        </div>
-
-        <div class="footer-column">
-            <h2 class="margin-bottom">CORPORATE OFFICE ADDRESS</h2>
-            <p>Plot No 278,</p>
-            <p>Indraprasth Society,</p>
-            <p>Behind Akashwani,</p>
-            <p>Near James Bajaj Showroom,</p>
-            <p>Hadapsar,</p>
-            <p>Pune 411028.</p>
-        </div>
-
-        <div class="footer-column">
-            <h2>CONNECT</h2>
-            <div class="icons">
-                <ul>
-                    <li> <a href="#"><i class="bi bi-facebook"></i></a> </li>
-                    <li> <a href="#"><i class="bi bi-whatsapp"></i></a> </li>
-                    <li> <a href="#"><i class="bi bi-linkedin"></i></a> </li>
-                    <li> <a href="#"><i class="bi bi-twitter"></i></a> </li>
-                </ul>
+        <div id="gallery">
+            <div class="gallery-title">
+                <h1>GALLERY</h1>
+            </div>
+            <div class="gallery-img-box">
+                <img src="image/gallery/gallery-img-1.jpg" alt="">
+            </div>
+            <div class="gallery-img-box">
+                <img src="image/gallery/gallery-img-2.jpg" alt="">
+            </div>
+            <div class="gallery-img-box">
+                <img src="image/gallery/gallery-img-3.jpg" alt="">
             </div>
         </div>
-    </div>
-     <div class="footer-bottom">
-         <span> &copy; Copyrights 2022- Shubham Group. All Right Reserved. </span>
-     </div>
-</section>
-        <!-- footer-section-end -->
+    </section>
+    <!-- gallery-section-end -->
+
+    <!-- contact-us-section-start -->
+    <section>
+        <div class="page-container">
+            <div id="contact-us">
+                <div class="contact-title">
+                    <h1>CONTACT US</h1>
+                </div>
+
+                <div class="map">
+                    <img src="image/contact-us/map.jpg" alt="">
+                </div>
+                <div class="address">
+                    <div class="add-details-1">
+                        <div class="icon">
+                            <span> <i class="bi bi-geo-alt-fill"></i></span>
+                        </div>
+                        <div class="information">
+                            <h2>Our Office Address</h2>
+                            <p>Plot No 278,
+                                Indraprasth Society,</P>
+                            <p>Behind Akashwani,
+                                Near James Bajaj Showroom,</p>
+                            <p>Hadapsar,
+                                Pune 411028.</p>
+                        </div>
+                    </div>
+
+                    <div class="add-details">
+                        <div class="icon">
+                            <span> <i class="bi bi-envelope-fill"></i></span>
+                        </div>
+                        <div class="information">
+                            <h2>General Enquiries</h2>
+                            <p>info@shubhamgroup.co.in</p>
+                        </div>
+                    </div>
+
+                    <div class="add-details">
+                        <div class="icon">
+                            <span><i class="bi bi-telephone-fill"></i></span>
+                        </div>
+                        <div class="information">
+                            <h2>Call Us</h2>
+                            <p> +91 9922999290 </p>
+                        </div>
+                    </div>
+
+                    <div class="add-details">
+                        <div class="icon">
+                            <span><i class="bi bi-watch"></i></span>
+                        </div>
+                        <div class="information">
+                            <h2>Our Timing</h2>
+                            <p> Mon-Sat : 9.00 Am - 6.00PM </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="page-container">
+            <div class="message">
+                <div class="message-col-1">
+                    <span><input type="text" value="Full Name"> </span>
+                    <span><input type="text" value="Mobile Number"> </span>
+                    <span><input type="text" value="Email ID"> </span>
+                </div>
+
+                <div class="message-col-2">
+                    <span> <textarea name="Message" id="Message" cols="30" rows="9"> Message</textarea> </span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- contact-us-section-end -->
+
+    <!-- footer-section-start -->
+    <section class="bg-color">
+        <div class="page-container">
+            <div id="footer">
+                <div class="footer-column">
+                    <h2 class="margin-bottom">USEFUL LINKS</h2>
+                    <ul>
+                        <li> <a href="#">PRIVACY POLICY</a> </li>
+                        <li> <a href="#">SERVICES</a> </li>
+                        <li> <a href="#">GALLERY</a> </li>
+                        <li> <a href="#">TESTIMONIALS</a> </li>
+                    </ul>
+                </div>
+                <div class="footer-column hidden">
+                    <h2 class="margin-bottom">USEFUL LINKS</h2>
+                    <ul>
+                        <li> <a href="#">PRIVACY POLICY</a> </li>
+                        <li> <a href="#">SERVICES</a> </li>
+                        <li> <a href="#">GALLERY</a> </li>
+                        <li> <a href="#">TESTIMONIALS</a> </li>
+                    </ul>
+                </div>
+
+                <div class="footer-column">
+                    <h2 class="margin-bottom">CORPORATE OFFICE ADDRESS</h2>
+                    <p>Plot No 278,</p>
+                    <p>Indraprasth Society,</p>
+                    <p>Behind Akashwani,</p>
+                    <p>Near James Bajaj Showroom,</p>
+                    <p>Hadapsar,</p>
+                    <p>Pune 411028.</p>
+                </div>
+
+                <div class="footer-column-1">
+                    <h2 class="margin-bottom">CONNECT</h2>
+                    <div class="footer-icons">
+                        <ul>
+                            <li> <a href="#"><i class="bi bi-facebook"></i></a> </li>
+                            <li> <a href="#"><i class="bi bi-whatsapp"></i></a> </li>
+                            <li> <a href="#"><i class="bi bi-linkedin"></i></a> </li>
+                            <li> <a href="#"><i class="bi bi-twitter"></i></a> </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="page-container">
+                <span> &copy; Copyrights 2022- Shubham Group. All Right Reserved. </span>
+            </div>
+        </div>
+
+    </section>
+    <!-- footer-section-end -->
 
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
