--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/contact-us.css">
+    <link rel="stylesheet" href="css/testimonials.css">
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="css/about-us.css">
     <link rel="stylesheet" href="css/services.css">
@@ -233,6 +234,23 @@ At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
     </section>
     <!-- gallery-section-end -->
 
+    <!-- testimonials-section-start -->
+<section>
+    <div class="page-container">
+        <div class="testimonials">
+            <span><i class="bi bi-quote"></i></span>
+            <h1>TESTIMONIALS</h1>
+            <p>Good work as done by the team at compartively lesser rates.</p>
+            <h6>Rohan Sen</h6>
+            <div class="box">
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </div>
+</section>
+    <!-- testimonials-section-end -->
+
     <!-- contact-us-section-start -->
     <section>
         <div class="page-container">
@@ -304,6 +322,9 @@ At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
                 <div class="message-col-2">
                     <span> <textarea name="Message" id="Message" cols="30" rows="9"> Message</textarea> </span>
                 </div>
+            </div>
+            <div class="submit">
+                <span><a href="#">Submit</a></span>
             </div>
         </div>
     </section>
