--- a/index.html
+++ b/index.html
@@ -66,344 +66,57 @@ At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
                         </ul>
                     </div>
                 </div>
-                <div class="header-nav">
+                <!-- <div class="header-nav">
+                    <div class="header-logo">
+                        <ul>
+                            <li> <img src="image/logo-3.jpg" alt=""> </li>
+                        </ul>
+                        </div>
                     <div class="header-buttons">
                         <ul>
                             <li> <a href="#">HOME</a> </li>
                             <li> <a href="#">ABOUT US</a> </li>
                             <li> <a href="#">SERVICES</a> </li>
                             <li> <a href="#">GALLERY</a> </li>
-                        </ul>
-                    </div>
-
-                    <div class="header-logo">
-                        <ul>
-                            <li> <img src="image/logo.png" alt=""> </li>
-                        </ul>
-                    </div>
-
-                    <div class="header-buttons flex-end">
-                        <ul>
                             <li> <a href="#">VIDEOS</a> </li>
                             <li> <a href="#">TESTIMONIALS</a> </li>
                             <li> <a href="#">CONTACT US</a> </li>
-                        </ul>
+                     </ul>
                     </div>
+
+                     <div class="header-logo">
+                        <ul>
+                            <li> <img src="image/logo.png" alt=""> </li>
+                        </ul>
+                    </div> 
+
+                    <div class="header-buttons-1">
+                        <ul>
+                            <li> <a href="#">TESTIMONIALS</a> </li>
+                            <li> <a href="#">CONTACT US</a> </li>
+                        </ul>
+                    </div> 
+                </div> -->
+
+                <div class="header-nav">
+                    <img src="./image/logo.png" alt="">
                 </div>
 
                 <div class="text">
+                    <h1>Coming Soon.....</h1>
+                    <h2>Delivering Value through Ethics & Excellence!</h2>
+                    <h5>Trusted Provider of Professional Facility Management Services</h5>
+                </div>
+
+                <!-- <div class="text">
                     <h1>Delivering Value through Ethics & Excellence! </h1>
                     <h5>Trusted Provider of Professional Facility Management Services</h5>
                     <span> <a href="#">Enquiry Now </a> </span>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
     <!-- home-page-end -->
-
-    <!-- services-section-start -->
-    <section>
-
-        <div id="services">
-
-            <div class="sect-title">
-                <h1>SERVICES</h1>
-            </div>
-
-            <div class="service-box">
-                <img src=" image/services/plumbing.jpg" alt="">
-                <h2>PLUMBING</h2>
-                <p>We use latest techniques to ensure that your job is done right at the first time and every time.</p>
-                <span><a href="#"> Enquiry Now </a></span>
-            </div>
-
-            <div class="service-box">
-                <img src=" image/services/waterproffing.jpg" alt="">
-                <h2>WATERPROOFING</h2>
-                <p>We also provide waterproofing services to all localities and make sure that water cannot damage your
-                    homes.</p>
-                <span><a href="#"> Enquiry Now </a></span>
-            </div>
-
-            <div class="service-box">
-                <img src=" image/services/fire-protection.jpg" alt="">
-                <h2>FIRE PROTECTION SERVICES</h2>
-                <p>Our services also include fire sprinkler, security and fire alarm systems installation and
-                    monitoring.</p>
-                <span><a href="#"> Enquiry Now </a></span>
-            </div>
-
-            <div class="service-box">
-                <img src=" image/services/painting.jpg" alt="">
-                <h2>PAINTING</h2>
-                <p>We expertise in residential painting for apartments flats, row houses, bungalows and many more
-                    projects.</p>
-                <span><a href="#"> Enquiry Now </a></span>
-            </div>
-
-            <div class="service-box">
-                <img src=" image/services/itering-design.jpg" alt="">
-                <h2>INTERIOR DESIGNING</h2>
-                <p>As per the test, preference and budget of your esteemed clients we help them in organising there
-                    space the way the want.</p>
-                <span><a href="#"> Enquiry Now </a></span>
-            </div>
-
-            <div class="service-box">
-                <img src=" image/services/turnkey-project-work.jpg" alt="">
-                <h2>TURNKEY PROJECT WORK</h2>
-                <p>Our team has the most qualified civil engineers and other dignified experts, providing the best
-                    turnkey project services to you.</p>
-                <span><a href="#"> Enquiry Now </a></span>
-            </div>
-
-            <div class="service-box">
-                <img src=" image/services/excavtion-work.jpg" alt="">
-                <h2>EXCAVATION WORK</h2>
-                <p>We are engaged in offering excavation work services that are rendered in to the standard set by us.
-                </p>
-                <span><a href="#"> Enquiry Now </a></span>
-            </div>
-
-            <div class="service-box">
-                <img src=" image/services/repaire-restoration.jpg" alt="">
-                <h2>REPAIR & RESTORATION</h2>
-                <p>We providing proficient and reliable repair and restoration services for residential buildings,
-                    commercial places etc.</p>
-                <span><a href="#"> Enquiry Now </a></span>
-            </div>
-
-        </div>
-
-    </section>
-    <!-- services-section-end -->
-
-    <!-- about-us-section-start -->
-    <section>
-        <div id="about-us">
-            <div class="about-title">
-                <h1>ABOUT US</h1>
-            </div>
-            <div class="about-text-box">
-                <h3>Shubham GROUP</h3>
-                <p>We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                    contracting services that surpass our clients expectations.
-                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                    contracting services that surpass our clients expectations.
-                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                    contracting services that surpass our clients expectations.
-                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                    contracting services that surpass our clients expectations.
-                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                    contracting services that surpass our clients expectations.
-                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                    contracting services that surpass our clients expectations.
-                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                    contracting services that surpass our clients expectations.
-                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                    contracting services that surpass our clients expectations.
-                    We Marvel contractors situated at Malad West, Mumbai, Maharashtra, provide optimum quality civil
-                    contracting services that surpass our clients expectations.
-                </p>
-            </div>
-            <div class="about-img-box">
-                <img src="image/about-us/about-img.jpg" alt="">
-            </div>
-
-        </div>
-    </section>
-
-    <!-- about-us-section-end -->
-
-    <!-- gallery-section-start -->
-    <section>
-        <div id="gallery">
-            <div class="gallery-title">
-                <h1>GALLERY</h1>
-            </div>
-            <div class="gallery-img-box">
-                <img src="image/gallery/gallery-img-1.jpg" alt="">
-            </div>
-            <div class="gallery-img-box">
-                <img src="image/gallery/gallery-img-2.jpg" alt="">
-            </div>
-            <div class="gallery-img-box">
-                <img src="image/gallery/gallery-img-3.jpg" alt="">
-            </div>
-        </div>
-    </section>
-    <!-- gallery-section-end -->
-
-    <!-- testimonials-section-start -->
-<section>
-    <div class="page-container">
-        <div class="testimonials">
-            <span><i class="bi bi-quote"></i></span>
-            <h1>TESTIMONIALS</h1>
-            <p>Good work as done by the team at compartively lesser rates.</p>
-            <h6>Rohan Sen</h6>
-            <div class="box">
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-    </div>
-</section>
-    <!-- testimonials-section-end -->
-
-    <!-- contact-us-section-start -->
-    <section>
-        <div class="page-container">
-            <div id="contact-us">
-                <div class="contact-title">
-                    <h1>CONTACT US</h1>
-                </div>
-
-                <div class="map">
-                    <img src="image/contact-us/map.jpg" alt="">
-                </div>
-                <div class="address">
-                    <div class="add-details-1">
-                        <div class="icon">
-                            <span> <i class="bi bi-geo-alt-fill"></i></span>
-                        </div>
-                        <div class="information">
-                            <h2>Our Office Address</h2>
-                            <p>Plot No 278,
-                                Indraprasth Society,</P>
-                            <p>Behind Akashwani,
-                                Near James Bajaj Showroom,</p>
-                            <p>Hadapsar,
-                                Pune 411028.</p>
-                        </div>
-                    </div>
-
-                    <div class="add-details">
-                        <div class="icon">
-                            <span> <i class="bi bi-envelope-fill"></i></span>
-                        </div>
-                        <div class="information">
-                            <h2>General Enquiries</h2>
-                            <p>info@shubhamgroup.co.in</p>
-                        </div>
-                    </div>
-
-                    <div class="add-details">
-                        <div class="icon">
-                            <span><i class="bi bi-telephone-fill"></i></span>
-                        </div>
-                        <div class="information">
-                            <h2>Call Us</h2>
-                            <p> +91 9922999290 </p>
-                        </div>
-                    </div>
-
-                    <div class="add-details">
-                        <div class="icon">
-                            <span><i class="bi bi-watch"></i></span>
-                        </div>
-                        <div class="information">
-                            <h2>Our Timing</h2>
-                            <p> Mon-Sat : 9.00 Am - 6.00PM </p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <div class="page-container">
-            <div class="message">
-                <div class="message-col-1">
-                    <span><input type="text" value="Full Name"> </span>
-                    <span><input type="text" value="Mobile Number"> </span>
-                    <span><input type="text" value="Email ID"> </span>
-                </div>
-
-                <div class="message-col-2">
-                    <span> <textarea name="Message" id="Message" cols="30" rows="9"> Message</textarea> </span>
-                </div>
-            </div>
-            <div class="submit">
-                <span><a href="#">Submit</a></span>
-            </div>
-        </div>
-    </section>
-
-    <!-- contact-us-section-end -->
-
-    <!-- footer-section-start -->
-    <section class="bg-color">
-        <div class="page-container">
-            <div id="footer">
-                <div class="footer-column">
-                    <h2 class="margin-bottom">USEFUL LINKS</h2>
-                    <ul>
-                        <li> <a href="#">PRIVACY POLICY</a> </li>
-                        <li> <a href="#">SERVICES</a> </li>
-                        <li> <a href="#">GALLERY</a> </li>
-                        <li> <a href="#">TESTIMONIALS</a> </li>
-                    </ul>
-                </div>
-                <div class="footer-column hidden">
-                    <h2 class="margin-bottom">USEFUL LINKS</h2>
-                    <ul>
-                        <li> <a href="#">PRIVACY POLICY</a> </li>
-                        <li> <a href="#">SERVICES</a> </li>
-                        <li> <a href="#">GALLERY</a> </li>
-                        <li> <a href="#">TESTIMONIALS</a> </li>
-                    </ul>
-                </div>
-
-                <div class="footer-column">
-                    <h2 class="margin-bottom">CORPORATE OFFICE ADDRESS</h2>
-                    <p>Plot No 278,</p>
-                    <p>Indraprasth Society,</p>
-                    <p>Behind Akashwani,</p>
-                    <p>Near James Bajaj Showroom,</p>
-                    <p>Hadapsar,</p>
-                    <p>Pune 411028.</p>
-                </div>
-
-                <div class="footer-column-1">
-                    <h2 class="margin-bottom">CONNECT</h2>
-                    <div class="footer-icons">
-                        <ul>
-                            <li> <a href="#"><i class="bi bi-facebook"></i></a> </li>
-                            <li> <a href="#"><i class="bi bi-whatsapp"></i></a> </li>
-                            <li> <a href="#"><i class="bi bi-linkedin"></i></a> </li>
-                            <li> <a href="#"><i class="bi bi-twitter"></i></a> </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <div class="page-container">
-                <span> &copy; Copyrights 2022- Shubham Group. All Right Reserved. </span>
-            </div>
-        </div>
-
-    </section>
-    <!-- footer-section-end -->
-
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-        var Tawk_API = Tawk_API || {},
-            Tawk_LoadStart = new Date();
-        (function () {
-            var s1 = document.createElement("script"),
-                s0 = document.getElementsByTagName("script")[0];
-            s1.async = true;
-            s1.src = "https://embed.tawk.to/61ebcd489bd1f31184d8b5a2/1fq0hjpna";
-            s1.charset = "UTF-8";
-            s1.setAttribute("crossorigin", "*");
-            s0.parentNode.insertBefore(s1, s0);
-        })();
-
-        //https://dashboard.tawk.to/?lang=en#/dashboard
-        //sameerEMail -paswd
-    </script>
-    <!--End of Tawk.to Script-->
 
 </body>
 
