--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ At the SHUBHAM GROUP OF COMPANIES, we provide reliable manpower.">
                 <div class="header-icon">
                     <div class="icons">
                         <ul>
-                            <li> <a href="#"> <i class="bi bi-telephone-fill"></i> </a> </li>
+                            <!-- <li> <a href="#"> <i class="bi bi-telephone-fill"></i> </a> </li>
                             <li> <a href="#"><i class="bi bi-envelope-fill"></i></a> </li>
                             <li> <a href="#"><i class="bi bi-whatsapp"></i></a> </li>
                             <li> <a href="#"><i class="bi bi-facebook"></i></a> </li>
                             <li> <a href="#"><i class="bi bi-linkedin"></i></a> </li>
-                            <li> <a href="#"><i class="bi bi-twitter"></i></a> </li>
+                            <li> <a href="#"><i class="bi bi-twitter"></i></a> </li> -->
                             <li> <a href="#"> <i class="bi bi-telephone"></i> <span>+91 9922999290</span> </a> </li>
                             <li> <a href="#"><i class="bi bi-envelope"></i> <span>info@shubhamgroup.co.in</span> </a>
                             </li>
